kubernetes/common/instances-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: instances-manager
  name: instances-manager
spec:
  revisionHistoryLimit: 5
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: instances-manager
  template:
    metadata:
      labels:
        app: instances-manager
    spec:
      serviceAccountName: uiproxy
      containers:
      - image: modelix/modelix-instances-manager:0.0.72
        imagePullPolicy: IfNotPresent
        name: instances-manager
        ports:
        - containerPort: 33332
        - containerPort: 5005
        resources:
          requests:
            memory: "300Mi"
            cpu: "0.1"
          limits:
            memory: "500Mi"
            cpu: "1.0"           
      restartPolicy: Always
