kubernetes/common/model-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app: model
  name: model
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: model
    spec:
      containers:
      - env:
        - name: jdbc_url
          value: jdbc:postgresql://db:5432/
        image: eu.gcr.io/webmps/webmps-model:201910231400
        imagePullPolicy: IfNotPresent
        name: model
        ports:
        - containerPort: 28101
        resources: 
          requests:
            memory: "150Mi"
            cpu: "0.1"
          limits:
            memory: "300Mi"
            cpu: "1.0"
        readinessProbe:
          tcpSocket:
            port: 28101
          initialDelaySeconds: 5
          periodSeconds: 3
        livenessProbe:
          tcpSocket:
            port: 28101
          initialDelaySeconds: 60
          periodSeconds: 10
      restartPolicy: Always
status: {}
