kubernetes/common/projector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: projector
  name: projector
spec:
  revisionHistoryLimit: 5
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: projector
  template:
    metadata:
      labels:
        app: projector
    spec:
      containers:
      - name: projector
        image: modelix/modelix-projector:0.0.67
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8887
        volumeMounts:
          - name: modelsecret
            mountPath: /secrets/modelsecret
            readOnly: true
        resources: 
          requests:
            memory: "2.0Gi"
            cpu: 500m
          limits:
            memory: "2.5Gi"
            cpu: "1.5"
        readinessProbe:
          httpGet:
            path: /
            port: 8887
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8887
          initialDelaySeconds: 120
          periodSeconds: 20
          timeoutSeconds: 10
      restartPolicy: Always
      volumes:
        - name: modelsecret
          secret:
            secretName: modelsecret
