kubernetes/common/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app: proxy
  name: proxy
spec:
  revisionHistoryLimit: 5
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: modelix/modelix-proxy:202006161724
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources: 
          requests:
            memory: "100Mi"
            cpu: "0.1"
          limits:
            memory: "500Mi"
            cpu: "1.0"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
      restartPolicy: Always
status: {}
