kubernetes/common/ui-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: ui
    spec:
      containers:
      - name: ui
        image: eu.gcr.io/cloudmps-250805/webmps-ui
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 33333
        resources: {}
        readinessProbe:
          httpGet:
            path: /repositoryAsHtml
            port: 33333
          initialDelaySeconds: 10
          periodSeconds: 30
          failureThreshold: 60
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /repositoryAsHtml
            port: 33333
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 3
      restartPolicy: Always
status: {}
