kubernetes/common/instances-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: instances-manager
  name: instances-manager
spec:
  type: NodePort
  ports:
  - name: "33332"
    port: 33332
    targetPort: 33332
  - name: "jvm-debug"
    port: 5005
    targetPort: 5005
  selector:
    app: instances-manager
