kubernetes/common/model-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: model
  name: model
spec:
  type: NodePort
  ports:
  - name: "28101"
    port: 28101
    targetPort: 28101
  selector:
    io.kompose.service: model
status:
  loadBalancer: {}
