kubernetes/common/oauth-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth
  name: oauth
spec:
  type: NodePort
  ports:
    - port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    app: oauth
