kubernetes/common/projector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: projector
  name: projector
spec:
  type: NodePort
  ports:
  - name: "8887"
    port: 8887
    targetPort: 8887
  selector:
    app: projector
