kubernetes/common/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  type: NodePort
  ports:
  - name: "8093"
    port: 8093
    targetPort: 33333
    nodePort: 32260
  selector:
    io.kompose.service: ui
status:
  loadBalancer: {}
