kubernetes/common/workspace-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: workspace-client
  name: workspace-client
spec:
  type: NodePort
  ports:
  - name: "projector"
    port: 8887
    targetPort: 8887
  - name: "modelix-ui"
    port: 33333
    targetPort: 33333
  selector:
    app: workspace-client
