kubernetes/common/workspace-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: workspace-manager
  name: workspace-manager
spec:
  type: NodePort
  ports:
  - name: "28104"
    port: 28104
    targetPort: 28104
  - name: "debug"
    port: 5071
    targetPort: 5071
  selector:
    app: workspace-manager
