kubernetes/common/model-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: model-ingress
spec:
  backend:
    serviceName: model
    servicePort: 28101
