kubernetes/common/ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
spec:
  backend:
    serviceName: ui
    servicePort: 33333
